src/view/browser/render/snapshots/nifi_lens__view__browser__render__snapshots__browser_tree_queues_and_cs_folders_collapsed.snap
---
source: src/view/browser/render/mod.rs
expression: render_to_string(&s)
---
"┌ Browser — last <DUR> ago ───────────────────────────────────────────────────────────────────────────────────────────────┐"
"│▾  root                           │root                                                                               │"
"│    ● Generate                    │Process Group — root                                                               │"
"│  ▸ → Queues (1)                  │                                                                                   │"
"│  ▸ ⚙ Controller services (1)     │loading…                                                                           │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
