src/view/browser/render/snapshots/nifi_lens__view__browser__render__snapshots__browser_tree_seeded_root_expanded.snap
---
source: src/view/browser/render/mod.rs
expression: render_to_string(&s)
---
"┌ Browser — last <DUR> ago ───────────────────────────────────────────────────────────────────────────────────────────────┐"
"│▾  root                           │root                                                                               │"
"│    ● GenerateFlowFile            │Process Group — root                                                               │"
"│    → gen→upd                     │                                                                                   │"
"│                                  │loading…                                                                           │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"│                                  │                                                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
